[package]
name = "pb-async"
# Remember to update html_root_url in src/lib.rs with each version.
edition = "2021"
version = "0.1.0"
authors = ["David Ross <daboross@daboross.net>"]
description = "Asynchronous client for the PushBullet API"

documentation = "https://docs.rs/pb-async/"
repository = "https://github.com/daboross/pb-async"
readme = "README.md"

license = "MIT"
keywords = ["log", "logging", "logger"]
categories = ["development-tools::debugging"]

include = ["Cargo.toml", "src/**/*", "tests/**/*", "LICENSE", "README.md", "CONTRIBUTING.md"]

[dependencies]
mpart-async = "^0.6"
bytes = "^1.2"
log = "0.4"
hyper = {version = "^0.14", features = ["client", "http2", "stream"]}
futures = "^0.3"
http = "^0.2"
hyper-tls = "0.5"
failure = { version = "0.1", default-features = false }
failure_derive = { version = "0.1" }
serde = "1"
serde_derive = "1"
serde_json = "1"

[dev-dependencies]
dotenv = "0.13"
tokio = "^1"
env_logger = "0.5"
